# thxgivingdayHw

./: .gitignore  Dockerfile  README.md  pyproject.toml
public/: index.html
src/samdul11food/: main.py
