[project]
name = "samdul11food"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = [
    "uvicorn[standard]>=0.30.6",
    "fastapi>=0.114.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
