[project]
name = "samdul11food"
version = "0.2.17"
description = "음식 이름 저장기"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = [
    "uvicorn[standard]>=0.30.6",
    "fastapi>=0.114.1",
    "pymysql>=1.1.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
